# SPDX-FileCopyrightText: Copyright 2022-2025, Arm Limited and/or its affiliates.
# SPDX-FileCopyrightText: Copyright (c) 2020 Troy Comi
# SPDX-License-Identifier: Apache-2.0 AND MIT

[metadata]
name = mlia
description = ML Inference Advisor
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/arm/mlia.git
author = Arm Ltd
author_email = mlia@arm.com
license = Apache-2.0
license_files = LICENSES/*.txt
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Artificial Intelligence
keywords = ml, arm, ethos-u, tflite

[options]
include_package_data = True
python_requires = >=3.9.0
package_dir =
    = src
packages = find_namespace:
# Pinning tensorflow & h5py to work around build issue on aarch64:
#   https://github.com/h5py/h5py/issues/2408
# Idea is to unpin these when it's resolved.
install_requires =
    numpy>=2.0.0
    tensorflow==2.20.0
    tf-keras==2.20.1
    h5py>=3.12.1
    requests~=2.32.3
    rich~=13.7.1
    tomli>=2.0.1 ; python_version<"3.11"
    tf-model-optimization-nightly @ git+https://github.com/chizkiyahu/model-optimization.git@db8cac1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    mlia=mlia.cli.main:main
    mlia-backend=mlia.cli.main:backend_main

[flake8]
# ignored errors
#   E501 line too long
#   W503 line break before binary operator
ignore = E501, W503
max-complexity = 18
select = B,C,E,F,W,T4

[blocklint]
# Do not allow any non-inclusive language
max_issue_threshold=1
# Blocklist: Words to lint in any context, with possibly special characters
# between, case insensitive
blocklist=master,slave,blacklist,whitelist,dummy
# Word list: Words to lint as whole words, with possibly special characters
# between, case insensitive
wordlist=he,she,him,her,his,hers
# Exact list: Words to lint as whole words exactly as entered
# exactlist=
# Files that should not be checked by blocklint.
skip_files=LICENSES/CC-PDDC.txt,docs/source/conf.py
